--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.myapplication"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -36,11 +36,10 @@ android {
 
 
 dependencies {
-    // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // swiperefreshlayout
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
+    // jsoup HTML parser library @ https://jsoup.org/
+    implementation 'org.jsoup:jsoup:1.15.4'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
@@ -51,4 +50,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation "androidx.startup:startup-runtime:1.0.0"
 }
