--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,72 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="UTF-8"?>
+<manifest
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.myapplication"
+    android:versionName="1.0"
+    android:versionCode="1"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-sdk android:targetSdkVersion="33" android:minSdkVersion="27"
+        tools:ignore="GradleOverrides" />
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
+
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-->
+
+<!--    <permission android:name="com.example.myapplication.DYNAMIC_RECEIVER_NOT_EXPORTED_PERMISSION" android:protectionLevel="signature"/>-->
+
+<!--    <uses-permission android:name="com.example.myapplication.DYNAMIC_RECEIVER_NOT_EXPORTED_PERMISSION"/>-->
+
+
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:appComponentFactory="androidx.core.app.CoreComponentFactory"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:fullBackupContent="@xml/backup_rules"
+        android:extractNativeLibs="false"
+        android:supportsRtl="true"
+        android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        tools:targetApi="26">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        tools:ignore="HardcodedDebugMode"
+        tools:targetApi="s">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".GraphCobaltActivity" />
 
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
-    </application>
+    <activity android:name="com.example.myapplication.MainActivity" android:exported="true">
+
+
+    <intent-filter>
+
+    <action android:name="android.intent.action.MAIN"/>
+
+    <category android:name="android.intent.category.LAUNCHER"/>
+
+</intent-filter>
+
+</activity>
+
+    <activity android:name="com.example.myapplication.GraphCobaltActivity"/>
+
+    <activity android:name="com.example.myapplication.FieldManager"/>
+
+    <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts"/>
+
+
+    <provider
+        android:name="androidx.startup.InitializationProvider"
+        android:exported="false"
+        android:authorities="com.example.myapplication.androidx-startup">
+
+    <meta-data android:name="androidx.emoji2.text.EmojiCompatInitializer" android:value="androidx.startup"/>
+
+    <meta-data android:name="androidx.lifecycle.ProcessLifecycleInitializer" android:value="androidx.startup"/>
+
+</provider>
+
+</application>
 
 </manifest>
